# spdrs

./: Cargo.toml  Makefile  README.md  run-e2e-server.sh
resources/test-data/e2e-pages/: no-links.html  recursive.html
src/: main.rs
