[package]
name = "spdrs"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
once_cell = "1.18.0"
reqwest = "0.11.22"
scraper = "0.18.1"
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.0"

[features]
e2e = []
